# code

./: compile_flags.txt
notes/: readme.md
notes/.obsidian/: workspace.json
notes/Study/: Linux.md  Qt.md  brpc.md  fun_introduce.md  odb.md
notes/Work/: dlspeed_all.md  虚拟机.md
project/MyPlayer/MyPlayerClient/: CMakeLists.txt  main.cpp  myplayer.cpp  myplayer.h  myplayer.ui  startuppage.cpp  startuppage.h
project/videoplayer/client/BitPlayer/: BitPlayer.rc  CMakeLists.txt  CMakeUserPresets.json  CURSOR_QT_GUIDE.md  adminwidget.cpp  adminwidget.h  adminwidget.ui  avatarbutton.cpp  avatarbutton.h  barrageedit.cpp  barrageedit.h  bitplayer.cpp  bitplayer.h  bitplayer.ui  bulletscreenitem.cpp  bulletscreenitem.h  checktable.cpp  checktable.h  checktable.ui  checktableitem.cpp  checktableitem.h  checktableitem.ui  confirmdialog.cpp  confirmdialog.h  editadmindialog.cpp  editadmindialog.h  editadmindialog.ui  homepagewidget.cpp  homepagewidget.h  homepagewidget.ui  iamgeRes.qrc  login.cpp  login.h  login.ui  main.cpp  modifymyselfdialog.cpp  modifymyselfdialog.h  modifymyselfdialog.ui  myselfwidget.cpp  myselfwidget.h  (+43 more)
project/videoplayer/client/BitPlayer/model/: data.cpp  data.h  datacenter.cpp  datacenter.h
project/videoplayer/client/BitPlayer/netclient/: netclient.cpp  netclient.h
project/videoplayer/client/BitPlayer/test/: TestHttp.h  testJson.h
project/videoplayer/client/BitPlayerMockServer/: CMakeLists.txt  bitplayerserver.cpp  bitplayerserver.h  bitplayerserver.ui  httpserver.cpp  httpserver.h  main.cpp  util.h
project/videoplayer/client/BitPlayerMockServer/videos/ffmpeg/: output.m3u8  output0.ts  output1.ts
project/videoplayer/server/: CMakeLists.txt  PROJECT_MODULES.md  QT_SETUP.md  VIDEO_UPLOAD_FLOW.md  depend.sh  docker-compose.yml  dockerfile  entrypoint.sh  global.conf  qt_example_CMakeLists.txt  setup_qt_env.bat  setup_qt_env.ps1  setup_qt_env_permanent.bat  setup_qt_env_permanent.ps1
project/videoplayer/server/common/: error.cc  error.h  sync.h
project/videoplayer/server/data/: barrage.cc  barrage.h  data.cc  data.h  file.cc  file.h  follow.cc  follow.h  permission_role.cc  permission_role.h  session.cc  session.h  user.cc  user.h  user_count.cc  user_count.h  user_identify_role.cc  user_identify_role.h  verify_code.cc  verify_code.h  video.cc  video.h  video_catgory_tag.cc  video_catgory_tag.h  video_count.cc  video_count.h  video_idlist.cc  video_idlist.h  video_like.cc  video_like.h  video_search.cc  video_search.h
project/videoplayer/server/data_test/barrage_test/: CMakeLists.txt  test.cc
project/videoplayer/server/data_test/code_test/: CMakeLists.txt  test.cc
project/videoplayer/server/data_test/file_test/: CMakeLists.txt  file_test.cc
project/videoplayer/server/data_test/follow_test/: test.cc
project/videoplayer/server/data_test/perm_test/: test.cc
project/videoplayer/server/data_test/search_test/: CMakeLists.txt  test.cc
project/videoplayer/server/data_test/session_test/: CMakeLists.txt  test.cc
project/videoplayer/server/data_test/uir_test/: test.cc
project/videoplayer/server/data_test/user_count_test/: test.cc
project/videoplayer/server/data_test/user_test/: test.cc
project/videoplayer/server/data_test/video_catgory_test/: test.cc
project/videoplayer/server/data_test/video_count/: CMakeLists.txt  test.cc
project/videoplayer/server/data_test/video_dbtest/: CMakeLists.txt  test.cc
project/videoplayer/server/data_test/video_idlist_test/: CMakeLists.txt  test.cc
project/videoplayer/server/data_test/video_like_test/: CMakeLists.txt  test.cc
project/videoplayer/server/data_test/video_test/: CMakeLists.txt  test.cc
project/videoplayer/server/proto/: http.proto  video.proto
project/videoplayer/server/svc_file/: CMakeLists.txt
project/videoplayer/server/svc_file/client/: test.cc
project/videoplayer/server/svc_file/source/: main.cc  svc_data.cc  svc_data.h  svc_mq.cc  svc_mq.h  svc_rpc.cc  svc_rpc.h  svc_server.cc  svc_server.h  svc_sync.cc  svc_sync.h
project/videoplayer/server/svc_gateway/: CMakeLists.txt
project/videoplayer/server/svc_gateway/source/: main.cc  svc_data.cc  svc_data.h  svc_rpc.cc  svc_rpc.h  svc_server.cc  svc_server.h
project/videoplayer/server/svc_transcode/: CMakeLists.txt
project/videoplayer/server/svc_transcode/source/: main.cc  svc_data.cc  svc_data.h  svc_mq.cc  svc_mq.h  svc_server.cc  svc_server.h  svc_worker.cc  svc_worker.h
project/videoplayer/server/svc_user/: CMakeLists.txt
project/videoplayer/server/svc_user/source/: main.cc  svc_data.cc  svc_data.h  svc_rpc.cc  svc_rpc.h  svc_server.cc  svc_server.h  svc_sync.cc  svc_sync.h
project/videoplayer/server/svc_video/: CMakeLists.txt
project/videoplayer/server/svc_video/source/: main.cc  svc_data.cc  svc_data.h  svc_rpc.cc  svc_rpc.h  svc_server.cc  svc_server.h  svc_sync.cc  svc_sync.h
project/videoplayer/text/: sql_data.md
