cmake_minimum_required(VERSION 3.19)
project(MyPlayerClient LANGUAGES CXX)

find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)

qt_standard_project_setup()

qt_add_executable(MyPlayerClient
    WIN32 MACOSX_BUNDLE
    main.cpp
    myplayer.cpp
    myplayer.h
    myplayer.ui
    startuppage.h startuppage.cpp
)

target_link_libraries(MyPlayerClient
    PRIVATE
        Qt::Core
        Qt::Widgets
)

include(GNUInstallDirs)

install(TARGETS MyPlayerClient
    BUNDLE  DESTINATION .
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
)

qt_generate_deploy_app_script(
    TARGET MyPlayerClient
    OUTPUT_SCRIPT deploy_script
    NO_UNSUPPORTED_PLATFORM_ERROR
)
install(SCRIPT ${deploy_script})
